# CamlKit

./: .ocamlformat  .ocamlformat-ignore  CamlKit.opam  Checklist.md  Makefile  README.md  dune-project  main  runtime.ll
.devcontainer/: Dockerfile  devcontainer.json
ex/: ex0.ll  ex0.mlkit  ex1.ll  ex1.mlkit  ex10.ll  ex10.mlkit  ex2.ll  ex2.mlkit  ex3.ll  ex3.mlkit  ex4.ll  ex4.mlkit  ex5.ll  ex5.mlkit  ex6.ll  ex6.mlkit  ex7.ll  ex7.mlkit  ex8.ll  ex8.mlkit  ex9.mlkit
lib/: absSyn.ml  closConv.ml  closConv.mli  compile.ml  contraction.ml  contraction.mli  dune  env.ml  env.mli  errorMsg.ml  ident.ml  ident.mli  instrs.ml  intSyn.ml  internal.ml  interpreter.ml  lexer.mll  lifting.ml  lifting.mli  llvmGen.ml  llvmGen.mli  machine.ml  machine.mli  main.ml  parse.ml  parser.mly  runtime.c  scoping.ml  scoping.mli  semant.ml  sexp.ml  simplify.ml  simplify.mli  stack.ml  stack.mli  typeCheck.ml  types.ml  types.mli  unification.ml  virtual.ml  (+1 more)
mono/: AnfToAlloc.ml  absToCore.ml  absToCore.mli  absToLam.ml  absToLam.mli  absToSexp.ml  closure.ml  combToG.ml  combToG.mli  combToGmachine.ml  coreToCg.ml  coreToCg.mli  coreToClos.ml  coreToCps.ml  coreToCps.mli  coreToLlvm.ml  coreToLlvm.mli  coreToSecd.ml  coreToSecd.mli  coreToZinc.ml  coreToZinc.mli  cpsToAlloc.ml  cpsToAlloc.mli  cpsToImp.ml  dune  lamToAnf.ml  lamToAnf.mli  lamToClos.ml  lamToCps.ml  lamToCps.mli  langToCore.ml  langToCore.mli  main.ml  main.mli  parse.ml  parse.mli  sexpToSecd.ml  sexpToSecd.mli
test/: allocTest.ml  anfTest.ml  closConvTest.ml  compileTest.ml  compile_Test.ml  coreTest.ml  dune  (+9 more)
(+139 files in other folders)
